--- a/ProjectMongoDB.ipynb
+++ b/ProjectMongoDB.ipynb
@@ -50,21 +50,44 @@
    "outputs": [],
    "source": [
     "import pymongo\n",
-    "\n",
     "myclient = pymongo.MongoClient(\"mongodb://localhost:27017/\")\n",
-    "mydb = myclient[\"Mydb\"]\n",
-    "mycol = mydb[\"Customer\"]\n",
-    "#for x in mycol.find():\n",
-    "  #print(x)"
+    "mydb = myclient[\"Mydb\"]"
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "fetch Customer data"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 40,
    "metadata": {},
    "outputs": [],
    "source": [
-    "import pandas as pd"
+    "CustomerColl = mydb[\"Customer\"]\n",
+    "Query_CustomerID={'CustomerID': 1}"
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "fetch order Data"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 20,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "OrderCall=mydb[\"Order\"]\n",
+    "Query_Order={\"SALESID\" : \"01088299_SO\"}"
    ]
   },
   {
@@ -77,47 +100,298 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 32,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import pandas as pd"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 41,
    "metadata": {},
    "outputs": [
     {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "                             _id                 CustomerName  CustomerID  \\\n",
-      "0       648c0167bf1781fae707c3ea                   قدري محمود           1   \n",
-      "1       648c0167bf1781fae707c3eb             احمد سليمان شفيق           3   \n",
-      "2       648c0167bf1781fae707c3ec                  مونيكا فايز           4   \n",
-      "3       648c0167bf1781fae707c3ed              عادل محمد مصطفى           5   \n",
-      "4       648c0167bf1781fae707c3ee   شركة ايماج للمياة المعدنية           6   \n",
-      "...                          ...                          ...         ...   \n",
-      "132323  648c016ebf1781fae709c8cd              روان احمد محمود      120107   \n",
-      "132324  648c016ebf1781fae709c8ce               دينا خالد مجيب      120895   \n",
-      "132325  648c016ebf1781fae709c8cf                   اميرة شوقى      124465   \n",
-      "132326  648c016ebf1781fae709c8d0  عبد العزيز سيد قدرى عبدالله      124795   \n",
-      "132327  648c016ebf1781fae709c8d1               عمرو محمد شلبي      124937   \n",
-      "\n",
-      "                  ID CompanyID   IDNATIONALSTR  Age     Range Age  \n",
-      "0       000002893_01      mfco           24566  124       UnKnown  \n",
-      "1       000002897_01      mfco    000002897_01  124       UnKnown  \n",
-      "2       000002900_01      mfco    000002900_01  124       UnKnown  \n",
-      "3       000002901_01      mfco    000002901_01  124       UnKnown  \n",
-      "4       000002905_01      mfco    000002905_01  124       UnKnown  \n",
-      "...              ...       ...             ...  ...           ...  \n",
-      "132323  01-278652745      mfco  29902140202048   24  Less than 25  \n",
-      "132324  01-281093514      mfco  29908050100724   24  Less than 25  \n",
-      "132325  01-289884333      mfco  29903111401422   24  Less than 25  \n",
-      "132326  01-552360442      mfco  29910012105776   24  Less than 25  \n",
-      "132327  01-554792095      mfco  29901110101372   24  Less than 25  \n",
-      "\n",
-      "[132328 rows x 8 columns]\n"
-     ]
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>_id</th>\n",
+       "      <th>CustomerName</th>\n",
+       "      <th>CustomerID</th>\n",
+       "      <th>ID</th>\n",
+       "      <th>CompanyID</th>\n",
+       "      <th>IDNATIONALSTR</th>\n",
+       "      <th>Age</th>\n",
+       "      <th>Range Age</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>648c0167bf1781fae707c3ea</td>\n",
+       "      <td>قدري محمود</td>\n",
+       "      <td>1</td>\n",
+       "      <td>000002893_01</td>\n",
+       "      <td>mfco</td>\n",
+       "      <td>24566</td>\n",
+       "      <td>124</td>\n",
+       "      <td>UnKnown</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "                        _id CustomerName  CustomerID            ID CompanyID  \\\n",
+       "0  648c0167bf1781fae707c3ea   قدري محمود           1  000002893_01      mfco   \n",
+       "\n",
+       "   IDNATIONALSTR  Age Range Age  \n",
+       "0          24566  124   UnKnown  "
+      ]
+     },
+     "execution_count": 41,
+     "metadata": {},
+     "output_type": "execute_result"
     }
    ],
    "source": [
-    "df=pd.DataFrame(list(mycol.find()))\n",
-    "print(df)"
+    "df_Customer=pd.DataFrame(list(CustomerColl.find(Query_CustomerID)))\n",
+    "df_Customer"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 34,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "Index(['_id', 'CustomerName', 'CustomerID', 'ID', 'CompanyID', 'IDNATIONALSTR',\n",
+       "       'Age', 'Range Age'],\n",
+       "      dtype='object')"
+      ]
+     },
+     "execution_count": 34,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "df_Customer.columns"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 43,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>_id</th>\n",
+       "      <th>SALESID</th>\n",
+       "      <th>LINENUM</th>\n",
+       "      <th>StatusID</th>\n",
+       "      <th>TAXGROUP</th>\n",
+       "      <th>QTYORDERED</th>\n",
+       "      <th>SALESPRICE</th>\n",
+       "      <th>LINEPERCENT</th>\n",
+       "      <th>LINEDISC</th>\n",
+       "      <th>LINEAMOUNT</th>\n",
+       "      <th>...</th>\n",
+       "      <th>OrderDateKey</th>\n",
+       "      <th>TaxValues</th>\n",
+       "      <th>ReceiptDateKey</th>\n",
+       "      <th>OrderDate</th>\n",
+       "      <th>AmountTaxS</th>\n",
+       "      <th>DateDiff</th>\n",
+       "      <th>DataRange</th>\n",
+       "      <th>Time</th>\n",
+       "      <th>Hour</th>\n",
+       "      <th>Hours</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>648c0902bf1781fae709c8d5</td>\n",
+       "      <td>01088299_SO</td>\n",
+       "      <td>1</td>\n",
+       "      <td>3</td>\n",
+       "      <td>*14%</td>\n",
+       "      <td>1</td>\n",
+       "      <td>2013.16</td>\n",
+       "      <td>10</td>\n",
+       "      <td>0</td>\n",
+       "      <td>1811.84</td>\n",
+       "      <td>...</td>\n",
+       "      <td>7072020</td>\n",
+       "      <td>14</td>\n",
+       "      <td>1092020</td>\n",
+       "      <td>2020-07-29</td>\n",
+       "      <td>2065.4976</td>\n",
+       "      <td>34</td>\n",
+       "      <td>From 30 To 35</td>\n",
+       "      <td>06:03:33 م</td>\n",
+       "      <td>18</td>\n",
+       "      <td>18</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>648c090ebf1781fae70b0f4a</td>\n",
+       "      <td>01088299_SO</td>\n",
+       "      <td>3</td>\n",
+       "      <td>3</td>\n",
+       "      <td>*14%</td>\n",
+       "      <td>1</td>\n",
+       "      <td>1385.96</td>\n",
+       "      <td>10</td>\n",
+       "      <td>0</td>\n",
+       "      <td>1247.36</td>\n",
+       "      <td>...</td>\n",
+       "      <td>7072020</td>\n",
+       "      <td>14</td>\n",
+       "      <td>1092020</td>\n",
+       "      <td>2020-07-29</td>\n",
+       "      <td>1421.9904</td>\n",
+       "      <td>34</td>\n",
+       "      <td>From 30 To 35</td>\n",
+       "      <td>06:03:33 م</td>\n",
+       "      <td>18</td>\n",
+       "      <td>18</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>648c0913bf1781fae70b9e75</td>\n",
+       "      <td>01088299_SO</td>\n",
+       "      <td>2</td>\n",
+       "      <td>3</td>\n",
+       "      <td>*14%</td>\n",
+       "      <td>1</td>\n",
+       "      <td>2013.16</td>\n",
+       "      <td>10</td>\n",
+       "      <td>0</td>\n",
+       "      <td>1811.84</td>\n",
+       "      <td>...</td>\n",
+       "      <td>7072020</td>\n",
+       "      <td>14</td>\n",
+       "      <td>1092020</td>\n",
+       "      <td>2020-07-29</td>\n",
+       "      <td>2065.4976</td>\n",
+       "      <td>34</td>\n",
+       "      <td>From 30 To 35</td>\n",
+       "      <td>06:03:33 م</td>\n",
+       "      <td>18</td>\n",
+       "      <td>18</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "<p>3 rows × 31 columns</p>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "                        _id      SALESID  LINENUM  StatusID TAXGROUP  \\\n",
+       "0  648c0902bf1781fae709c8d5  01088299_SO        1         3     *14%   \n",
+       "1  648c090ebf1781fae70b0f4a  01088299_SO        3         3     *14%   \n",
+       "2  648c0913bf1781fae70b9e75  01088299_SO        2         3     *14%   \n",
+       "\n",
+       "   QTYORDERED  SALESPRICE  LINEPERCENT  LINEDISC  LINEAMOUNT  ...  \\\n",
+       "0           1     2013.16           10         0     1811.84  ...   \n",
+       "1           1     1385.96           10         0     1247.36  ...   \n",
+       "2           1     2013.16           10         0     1811.84  ...   \n",
+       "\n",
+       "   OrderDateKey  TaxValues  ReceiptDateKey  OrderDate AmountTaxS  DateDiff  \\\n",
+       "0       7072020         14         1092020 2020-07-29  2065.4976        34   \n",
+       "1       7072020         14         1092020 2020-07-29  1421.9904        34   \n",
+       "2       7072020         14         1092020 2020-07-29  2065.4976        34   \n",
+       "\n",
+       "       DataRange        Time  Hour  Hours  \n",
+       "0  From 30 To 35  06:03:33 م    18     18  \n",
+       "1  From 30 To 35  06:03:33 م    18     18  \n",
+       "2  From 30 To 35  06:03:33 م    18     18  \n",
+       "\n",
+       "[3 rows x 31 columns]"
+      ]
+     },
+     "execution_count": 43,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "df_order= pd.DataFrame(list(OrderCall.find(Query_Order)))\n",
+    "df_order"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 24,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "Index(['_id', 'SALESID', 'LINENUM', 'StatusID', 'TAXGROUP', 'QTYORDERED',\n",
+       "       'SALESPRICE', 'LINEPERCENT', 'LINEDISC', 'LINEAMOUNT', 'AmountTax',\n",
+       "       'SALESQTY', 'SALESTYPE', 'INVENTDIMID', 'ReceiptDate', 'ProductID',\n",
+       "       'CustomerID', 'RegionID', 'SalesGroupID', 'CompanyID', 'SubProductID',\n",
+       "       'OrderDateKey', 'TaxValues', 'ReceiptDateKey', 'OrderDate',\n",
+       "       'AmountTaxS', 'DateDiff', 'DataRange', 'Time', 'Hour', 'Hours'],\n",
+       "      dtype='object')"
+      ]
+     },
+     "execution_count": 24,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "df_order.columns"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
