--- a/ProjectMongoDB.ipynb
+++ b/ProjectMongoDB.ipynb
@@ -10,7 +10,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -19,7 +19,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -28,7 +28,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -45,7 +45,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -64,7 +64,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -82,7 +82,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -100,7 +100,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -109,7 +109,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [
     {
@@ -180,7 +180,7 @@
        "1      mfco  01-115896955  124   UnKnown  "
       ]
      },
-     "execution_count": 8,
+     "execution_count": 14,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -192,7 +192,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [
     {
@@ -203,7 +203,7 @@
        "      dtype='object')"
       ]
      },
-     "execution_count": 9,
+     "execution_count": 15,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -214,7 +214,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [
     {
@@ -391,7 +391,7 @@
        "[4 rows x 31 columns]"
       ]
      },
-     "execution_count": 10,
+     "execution_count": 16,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -403,7 +403,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [
     {
@@ -418,7 +418,7 @@
        "      dtype='object')"
       ]
      },
-     "execution_count": 11,
+     "execution_count": 17,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -429,7 +429,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [
     {
@@ -718,7 +718,7 @@
        "[8 rows x 24 columns]"
       ]
      },
-     "execution_count": 12,
+     "execution_count": 18,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -729,7 +729,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 19,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -739,7 +739,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 20,
    "metadata": {},
    "outputs": [
     {
@@ -951,7 +951,7 @@
        "[4 rows x 37 columns]"
       ]
      },
-     "execution_count": 14,
+     "execution_count": 20,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -964,16 +964,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 21,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "(4, 38)"
+       "(4, 37)"
       ]
      },
-     "execution_count": 25,
+     "execution_count": 21,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -983,8 +983,16 @@
    ]
   },
   {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "groupby Orders by customers"
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 22,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -993,7 +1001,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 36,
+   "execution_count": 28,
    "metadata": {},
    "outputs": [
     {
@@ -1018,45 +1026,230 @@
        "    <tr style=\"text-align: right;\">\n",
        "      <th></th>\n",
        "      <th>CustomerID</th>\n",
-       "      <th>CountOrder</th>\n",
+       "      <th>sumOrder</th>\n",
        "    </tr>\n",
        "  </thead>\n",
        "  <tbody>\n",
        "    <tr>\n",
        "      <th>0</th>\n",
        "      <td>55025</td>\n",
-       "      <td>1</td>\n",
+       "      <td>2065.4976</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>1</th>\n",
        "      <td>75857</td>\n",
-       "      <td>3</td>\n",
+       "      <td>2130.9090</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
        "</div>"
       ],
       "text/plain": [
-       "   CustomerID  CountOrder\n",
-       "0       55025           1\n",
-       "1       75857           3"
+       "   CustomerID   sumOrder\n",
+       "0       55025  2065.4976\n",
+       "1       75857  2130.9090"
       ]
      },
-     "execution_count": 36,
+     "execution_count": 28,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "customer_order.groupby('CustomerID')['CustomerID'].agg(CountOrder='count').\\\n",
-    "    reset_index()\n"
+    "customer_order.groupby('CustomerID')['AmountTax'].\\\n",
+    "    agg(sumOrder='sum').\\\n",
+    "    reset_index().\\\n",
+    "    query('sumOrder <=80000 ')\n",
+    "    #query('sumOrder in (1,3) ')"
    ]
   },
   {
-   "attachments": {},
-   "cell_type": "markdown",
+   "cell_type": "code",
+   "execution_count": 24,
    "metadata": {},
-   "source": []
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>CustomerID</th>\n",
+       "      <th>_id_Customer</th>\n",
+       "      <th>CustomerName</th>\n",
+       "      <th>ID</th>\n",
+       "      <th>CompanyID_Customer</th>\n",
+       "      <th>IDNATIONALSTR</th>\n",
+       "      <th>Age</th>\n",
+       "      <th>Range Age</th>\n",
+       "      <th>_id</th>\n",
+       "      <th>SALESID</th>\n",
+       "      <th>...</th>\n",
+       "      <th>OrderDateKey</th>\n",
+       "      <th>TaxValues</th>\n",
+       "      <th>ReceiptDateKey</th>\n",
+       "      <th>OrderDate</th>\n",
+       "      <th>AmountTaxS</th>\n",
+       "      <th>DateDiff</th>\n",
+       "      <th>DataRange</th>\n",
+       "      <th>Time</th>\n",
+       "      <th>Hour</th>\n",
+       "      <th>Hours</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>55025</td>\n",
+       "      <td>648c016abf1781fae7087eaa</td>\n",
+       "      <td>احمد محمد حسن</td>\n",
+       "      <td>01-025672599</td>\n",
+       "      <td>mfco</td>\n",
+       "      <td>01-025672599</td>\n",
+       "      <td>124</td>\n",
+       "      <td>UnKnown</td>\n",
+       "      <td>648c0902bf1781fae709c8d6</td>\n",
+       "      <td>01084337_SO</td>\n",
+       "      <td>...</td>\n",
+       "      <td>7122019</td>\n",
+       "      <td>14</td>\n",
+       "      <td>3022020</td>\n",
+       "      <td>2019-12-28</td>\n",
+       "      <td>2065.4976</td>\n",
+       "      <td>37</td>\n",
+       "      <td>From 35 To 40</td>\n",
+       "      <td>06:59:33 م</td>\n",
+       "      <td>18</td>\n",
+       "      <td>18</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>75857</td>\n",
+       "      <td>648c016bbf1781fae708c0af</td>\n",
+       "      <td>هبة محمد عبد الله</td>\n",
+       "      <td>01-115896955</td>\n",
+       "      <td>mfco</td>\n",
+       "      <td>01-115896955</td>\n",
+       "      <td>124</td>\n",
+       "      <td>UnKnown</td>\n",
+       "      <td>648c0930bf1781fae70e7740</td>\n",
+       "      <td>01038851_SO</td>\n",
+       "      <td>...</td>\n",
+       "      <td>7012013</td>\n",
+       "      <td>10</td>\n",
+       "      <td>20012013</td>\n",
+       "      <td>2013-01-01</td>\n",
+       "      <td>628.1220</td>\n",
+       "      <td>19</td>\n",
+       "      <td>From 15 To 20</td>\n",
+       "      <td>04:38:11 م</td>\n",
+       "      <td>16</td>\n",
+       "      <td>16</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>75857</td>\n",
+       "      <td>648c016bbf1781fae708c0af</td>\n",
+       "      <td>هبة محمد عبد الله</td>\n",
+       "      <td>01-115896955</td>\n",
+       "      <td>mfco</td>\n",
+       "      <td>01-115896955</td>\n",
+       "      <td>124</td>\n",
+       "      <td>UnKnown</td>\n",
+       "      <td>648c0931bf1781fae70e8b1a</td>\n",
+       "      <td>01038851_SO</td>\n",
+       "      <td>...</td>\n",
+       "      <td>7012013</td>\n",
+       "      <td>10</td>\n",
+       "      <td>20012013</td>\n",
+       "      <td>2013-01-01</td>\n",
+       "      <td>628.1220</td>\n",
+       "      <td>19</td>\n",
+       "      <td>From 15 To 20</td>\n",
+       "      <td>04:38:11 م</td>\n",
+       "      <td>16</td>\n",
+       "      <td>16</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>75857</td>\n",
+       "      <td>648c016bbf1781fae708c0af</td>\n",
+       "      <td>هبة محمد عبد الله</td>\n",
+       "      <td>01-115896955</td>\n",
+       "      <td>mfco</td>\n",
+       "      <td>01-115896955</td>\n",
+       "      <td>124</td>\n",
+       "      <td>UnKnown</td>\n",
+       "      <td>648c0932bf1781fae70ea451</td>\n",
+       "      <td>01038851_SO</td>\n",
+       "      <td>...</td>\n",
+       "      <td>7012013</td>\n",
+       "      <td>10</td>\n",
+       "      <td>20012013</td>\n",
+       "      <td>2013-01-01</td>\n",
+       "      <td>874.6650</td>\n",
+       "      <td>19</td>\n",
+       "      <td>From 15 To 20</td>\n",
+       "      <td>04:38:11 م</td>\n",
+       "      <td>16</td>\n",
+       "      <td>16</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "<p>4 rows × 38 columns</p>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "   CustomerID              _id_Customer       CustomerName            ID  \\\n",
+       "0       55025  648c016abf1781fae7087eaa      احمد محمد حسن  01-025672599   \n",
+       "1       75857  648c016bbf1781fae708c0af  هبة محمد عبد الله  01-115896955   \n",
+       "2       75857  648c016bbf1781fae708c0af  هبة محمد عبد الله  01-115896955   \n",
+       "3       75857  648c016bbf1781fae708c0af  هبة محمد عبد الله  01-115896955   \n",
+       "\n",
+       "  CompanyID_Customer IDNATIONALSTR  Age Range Age                       _id  \\\n",
+       "0               mfco  01-025672599  124   UnKnown  648c0902bf1781fae709c8d6   \n",
+       "1               mfco  01-115896955  124   UnKnown  648c0930bf1781fae70e7740   \n",
+       "2               mfco  01-115896955  124   UnKnown  648c0931bf1781fae70e8b1a   \n",
+       "3               mfco  01-115896955  124   UnKnown  648c0932bf1781fae70ea451   \n",
+       "\n",
+       "       SALESID  ...  OrderDateKey  TaxValues ReceiptDateKey  OrderDate  \\\n",
+       "0  01084337_SO  ...       7122019         14        3022020 2019-12-28   \n",
+       "1  01038851_SO  ...       7012013         10       20012013 2013-01-01   \n",
+       "2  01038851_SO  ...       7012013         10       20012013 2013-01-01   \n",
+       "3  01038851_SO  ...       7012013         10       20012013 2013-01-01   \n",
+       "\n",
+       "   AmountTaxS  DateDiff      DataRange        Time  Hour  Hours  \n",
+       "0   2065.4976        37  From 35 To 40  06:59:33 م    18     18  \n",
+       "1    628.1220        19  From 15 To 20  04:38:11 م    16     16  \n",
+       "2    628.1220        19  From 15 To 20  04:38:11 م    16     16  \n",
+       "3    874.6650        19  From 15 To 20  04:38:11 م    16     16  \n",
+       "\n",
+       "[4 rows x 38 columns]"
+      ]
+     },
+     "execution_count": 24,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "customer_order"
+   ]
   }
  ],
  "metadata": {
