--- a/ProjectMongoDB.ipynb
+++ b/ProjectMongoDB.ipynb
@@ -1217,6 +1217,33 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "Export data to json"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 56,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import os\n",
+    "os.makedirs('C:\\\\Users\\\\Tech Shop\\\\Desktop\\\\DataEngineer',exist_ok=True)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 61,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "sumOrder.to_json('C:\\\\Users\\\\Tech Shop\\\\Desktop\\\\DataEngineer\\\\My.json',default_handler=str, orient = 'records')"
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "sort values"
    ]
   },
@@ -1407,13 +1434,6 @@
    "source": [
     "customer_order.sort_values(['CustomerID','OrderDate'],ascending=[False,True])"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
