--- a/ProjectMongoDB.ipynb
+++ b/ProjectMongoDB.ipynb
@@ -1232,11 +1232,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 61,
+   "execution_count": 62,
    "metadata": {},
    "outputs": [],
    "source": [
-    "sumOrder.to_json('C:\\\\Users\\\\Tech Shop\\\\Desktop\\\\DataEngineer\\\\My.json',default_handler=str, orient = 'records')"
+    "sumOrder.to_json('C:\\\\Users\\\\Tech Shop\\\\Desktop\\\\DataEngineer\\\\My.json',default_handler=str, orient = 'records',lines=True)"
    ]
   },
   {
