--- a/ProjectMongoDB.ipynb
+++ b/ProjectMongoDB.ipynb
@@ -28,73 +28,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 9,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Collecting pymongo\n",
-      "  Downloading pymongo-4.3.3-cp39-cp39-win_amd64.whl (382 kB)\n",
-      "     ---------------------------------------- 0.0/382.5 kB ? eta -:--:--\n",
-      "     -- ---------------------------------- 30.7/382.5 kB 660.6 kB/s eta 0:00:01\n",
-      "     --- --------------------------------- 41.0/382.5 kB 487.6 kB/s eta 0:00:01\n",
-      "     -------- ---------------------------- 92.2/382.5 kB 655.4 kB/s eta 0:00:01\n",
-      "     ----------- ------------------------ 122.9/382.5 kB 722.1 kB/s eta 0:00:01\n",
-      "     --------------- -------------------- 163.8/382.5 kB 756.6 kB/s eta 0:00:01\n",
-      "     ------------------- ---------------- 204.8/382.5 kB 778.2 kB/s eta 0:00:01\n",
-      "     ----------------------- ------------ 245.8/382.5 kB 793.0 kB/s eta 0:00:01\n",
-      "     -------------------------- --------- 286.7/382.5 kB 770.1 kB/s eta 0:00:01\n",
-      "     ------------------------------ ----- 327.7/382.5 kB 811.9 kB/s eta 0:00:01\n",
-      "     ---------------------------------- - 368.6/382.5 kB 791.2 kB/s eta 0:00:01\n",
-      "     -----------------------------------  378.9/382.5 kB 813.8 kB/s eta 0:00:01\n",
-      "     -----------------------------------  378.9/382.5 kB 813.8 kB/s eta 0:00:01\n",
-      "     -----------------------------------  378.9/382.5 kB 813.8 kB/s eta 0:00:01\n",
-      "     ------------------------------------ 382.5/382.5 kB 611.3 kB/s eta 0:00:00\n",
-      "Collecting dnspython<3.0.0,>=1.16.0\n",
-      "  Downloading dnspython-2.3.0-py3-none-any.whl (283 kB)\n",
-      "     ---------------------------------------- 0.0/283.7 kB ? eta -:--:--\n",
-      "     ---- ---------------------------------- 30.7/283.7 kB 1.4 MB/s eta 0:00:01\n",
-      "     -------- ------------------------------ 61.4/283.7 kB 1.1 MB/s eta 0:00:01\n",
-      "     -------------- --------------------- 112.6/283.7 kB 939.4 kB/s eta 0:00:01\n",
-      "     ------------------ ----------------- 143.4/283.7 kB 950.9 kB/s eta 0:00:01\n",
-      "     ------------------------ ----------- 194.6/283.7 kB 908.0 kB/s eta 0:00:01\n",
-      "     ---------------------------- ------- 225.3/283.7 kB 919.0 kB/s eta 0:00:01\n",
-      "     -------------------------------- --- 256.0/283.7 kB 874.6 kB/s eta 0:00:01\n",
-      "     -----------------------------------  276.5/283.7 kB 853.3 kB/s eta 0:00:01\n",
-      "     -----------------------------------  276.5/283.7 kB 853.3 kB/s eta 0:00:01\n",
-      "     -----------------------------------  276.5/283.7 kB 853.3 kB/s eta 0:00:01\n",
-      "     -----------------------------------  276.5/283.7 kB 853.3 kB/s eta 0:00:01\n",
-      "     ------------------------------------ 283.7/283.7 kB 530.9 kB/s eta 0:00:00\n",
-      "Installing collected packages: dnspython, pymongo\n",
-      "Successfully installed dnspython-2.3.0 pymongo-4.3.3\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
-    "!pip install pymongo"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 2,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Requirement already satisfied: pandas in c:\\anaconda\\envs\\py39\\lib\\site-packages (1.5.3)\n",
-      "Requirement already satisfied: numpy>=1.20.3 in c:\\anaconda\\envs\\py39\\lib\\site-packages (from pandas) (1.24.3)\n",
-      "Requirement already satisfied: pytz>=2020.1 in c:\\anaconda\\envs\\py39\\lib\\site-packages (from pandas) (2022.7)\n",
-      "Requirement already satisfied: python-dateutil>=2.8.1 in c:\\users\\ism01\\appdata\\roaming\\python\\python39\\site-packages (from pandas) (2.8.2)\n",
-      "Requirement already satisfied: six>=1.5 in c:\\users\\ism01\\appdata\\roaming\\python\\python39\\site-packages (from python-dateutil>=2.8.1->pandas) (1.16.0)\n"
-     ]
-    }
-   ],
-   "source": [
-    "!pip install pandas"
+    "#!pip install pymongo"
    ]
   },
   {
@@ -1294,7 +1232,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 62,
+   "execution_count": 65,
    "metadata": {},
    "outputs": [],
    "source": [
