--- a/DBConn.ipynb
+++ b/DBConn.ipynb
@@ -22,15 +22,27 @@
    "metadata": {},
    "source": [
     "#!pip install ipython-sql\n",
-    "!pip install py-postgresql\n",
-    "#!pip install psycopg2-binary\n"
+    "#!pip install py-postgresql\n",
+    "#!pip install psycopg2-binary\n",
+    "#!pip install sqlalchemy\n",
+    "#!pip3 install sqlalchemy\n",
+    "#!pip3 install flask-sqlalchemy --user\n",
+    "\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 14,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "<sqlalchemy.engine.base.Connection object at 0x000001C5252F8880>\n"
+     ]
+    }
+   ],
    "source": [
     "import psycopg2 \n",
     "import pandas as ps\n",
@@ -40,9 +52,9 @@
     "url_object = URL.create(\n",
     "    \n",
     "    \"postgresql+psycopg2\",\n",
-    "    username=\"openpg\",\n",
+    "    username=\"postgres\",\n",
     "  #  password=\"openpgpwd\",\n",
-    "    password=\"P@ssw0rd\",  # plain (unescaped) text\n",
+    "    password=\"openpgpwd\",  # plain (unescaped) text\n",
     "    host=\"localhost\",\n",
     "   # database=\"test\",\n",
     "    database=\"RetailDB\",\n",
@@ -71,9 +83,223 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 15,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>id</th>\n",
+       "      <th>order_id</th>\n",
+       "      <th>sequence</th>\n",
+       "      <th>company_id</th>\n",
+       "      <th>currency_id</th>\n",
+       "      <th>order_partner_id</th>\n",
+       "      <th>salesman_id</th>\n",
+       "      <th>product_id</th>\n",
+       "      <th>product_uom</th>\n",
+       "      <th>product_packaging_id</th>\n",
+       "      <th>...</th>\n",
+       "      <th>reservation_begin</th>\n",
+       "      <th>start_date</th>\n",
+       "      <th>is_rental</th>\n",
+       "      <th>return_date</th>\n",
+       "      <th>qty_returned</th>\n",
+       "      <th>parent_line_id</th>\n",
+       "      <th>pricing_id</th>\n",
+       "      <th>has_displayed_warning_upsell</th>\n",
+       "      <th>remaining_hours</th>\n",
+       "      <th>fsm_lot_id</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>1</td>\n",
+       "      <td>1</td>\n",
+       "      <td>10</td>\n",
+       "      <td>1</td>\n",
+       "      <td>1</td>\n",
+       "      <td>11</td>\n",
+       "      <td>6</td>\n",
+       "      <td>42</td>\n",
+       "      <td>1</td>\n",
+       "      <td>None</td>\n",
+       "      <td>...</td>\n",
+       "      <td>NaT</td>\n",
+       "      <td>NaT</td>\n",
+       "      <td>False</td>\n",
+       "      <td>NaT</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>None</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>None</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>None</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>2</td>\n",
+       "      <td>1</td>\n",
+       "      <td>10</td>\n",
+       "      <td>1</td>\n",
+       "      <td>1</td>\n",
+       "      <td>11</td>\n",
+       "      <td>6</td>\n",
+       "      <td>17</td>\n",
+       "      <td>1</td>\n",
+       "      <td>None</td>\n",
+       "      <td>...</td>\n",
+       "      <td>NaT</td>\n",
+       "      <td>NaT</td>\n",
+       "      <td>False</td>\n",
+       "      <td>NaT</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>None</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>None</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>None</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>3</td>\n",
+       "      <td>1</td>\n",
+       "      <td>10</td>\n",
+       "      <td>1</td>\n",
+       "      <td>1</td>\n",
+       "      <td>11</td>\n",
+       "      <td>6</td>\n",
+       "      <td>16</td>\n",
+       "      <td>1</td>\n",
+       "      <td>None</td>\n",
+       "      <td>...</td>\n",
+       "      <td>NaT</td>\n",
+       "      <td>NaT</td>\n",
+       "      <td>False</td>\n",
+       "      <td>NaT</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>None</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>None</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>None</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>4</td>\n",
+       "      <td>2</td>\n",
+       "      <td>10</td>\n",
+       "      <td>1</td>\n",
+       "      <td>1</td>\n",
+       "      <td>13</td>\n",
+       "      <td>2</td>\n",
+       "      <td>14</td>\n",
+       "      <td>4</td>\n",
+       "      <td>None</td>\n",
+       "      <td>...</td>\n",
+       "      <td>NaT</td>\n",
+       "      <td>NaT</td>\n",
+       "      <td>False</td>\n",
+       "      <td>NaT</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>None</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>None</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>None</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>5</td>\n",
+       "      <td>2</td>\n",
+       "      <td>10</td>\n",
+       "      <td>1</td>\n",
+       "      <td>1</td>\n",
+       "      <td>13</td>\n",
+       "      <td>2</td>\n",
+       "      <td>15</td>\n",
+       "      <td>4</td>\n",
+       "      <td>None</td>\n",
+       "      <td>...</td>\n",
+       "      <td>NaT</td>\n",
+       "      <td>NaT</td>\n",
+       "      <td>False</td>\n",
+       "      <td>NaT</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>None</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>None</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>None</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "<p>5 rows × 56 columns</p>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "   id  order_id  sequence  company_id  currency_id  order_partner_id  \\\n",
+       "0   1         1        10           1            1                11   \n",
+       "1   2         1        10           1            1                11   \n",
+       "2   3         1        10           1            1                11   \n",
+       "3   4         2        10           1            1                13   \n",
+       "4   5         2        10           1            1                13   \n",
+       "\n",
+       "   salesman_id  product_id  product_uom product_packaging_id  ...  \\\n",
+       "0            6          42            1                 None  ...   \n",
+       "1            6          17            1                 None  ...   \n",
+       "2            6          16            1                 None  ...   \n",
+       "3            2          14            4                 None  ...   \n",
+       "4            2          15            4                 None  ...   \n",
+       "\n",
+       "   reservation_begin  start_date is_rental return_date qty_returned  \\\n",
+       "0                NaT         NaT     False         NaT          0.0   \n",
+       "1                NaT         NaT     False         NaT          0.0   \n",
+       "2                NaT         NaT     False         NaT          0.0   \n",
+       "3                NaT         NaT     False         NaT          0.0   \n",
+       "4                NaT         NaT     False         NaT          0.0   \n",
+       "\n",
+       "  parent_line_id pricing_id has_displayed_warning_upsell remaining_hours  \\\n",
+       "0           None        NaN                         None             0.0   \n",
+       "1           None        NaN                         None             0.0   \n",
+       "2           None        NaN                         None             0.0   \n",
+       "3           None        NaN                         None             0.0   \n",
+       "4           None        NaN                         None             0.0   \n",
+       "\n",
+       "  fsm_lot_id  \n",
+       "0       None  \n",
+       "1       None  \n",
+       "2       None  \n",
+       "3       None  \n",
+       "4       None  \n",
+       "\n",
+       "[5 rows x 56 columns]"
+      ]
+     },
+     "execution_count": 15,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "from sqlalchemy import text\n",
     "\n",
@@ -86,48 +312,128 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 16,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "The sql extension is already loaded. To reload it, use:\n",
+      "  %reload_ext sql\n"
+     ]
+    }
+   ],
    "source": [
     "%load_ext sql"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 17,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "env: DATABASE_URL=postgresql://postgres:openpgpwd@localhost:5432/RetailDB\n"
+     ]
+    }
+   ],
    "source": [
     "#%env  DATABASE_URL = postgresql://openpg:openpgpwd@localhost:5432/test\n",
-    "%env  DATABASE_URL = postgresql://openpg:P@ssw0rd@localhost:5432/RetailDB\n",
+    "%env  DATABASE_URL = postgresql://postgres:openpgpwd@localhost:5432/RetailDB\n",
     "#DATABASE_URL=presto://user@localhost:8080/system"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 18,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'postgresql://postgres:openpgpwd@localhost:5432/RetailDB'"
+      ]
+     },
+     "execution_count": 18,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "%env DATABASE_URL"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 19,
    "metadata": {},
    "outputs": [],
    "source": [
     "#%sql postgresql://openpg:openpgpwd@localhost:5432/test\n",
-    "%sql postgresql://openpg:P@ssw0rd@localhost:5432/RetailDB"
+    "%sql postgresql://postgres:openpgpwd@localhost:5432/RetailDB"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 20,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      " * postgresql://postgres:***@localhost:5432/RetailDB\n",
+      "0 rows affected.\n"
+     ]
+    },
+    {
+     "data": {
+      "text/html": [
+       "<table>\n",
+       "    <thead>\n",
+       "        <tr>\n",
+       "            <th>id</th>\n",
+       "            <th>message_main_attachment_id</th>\n",
+       "            <th>currency_id</th>\n",
+       "            <th>company_id</th>\n",
+       "            <th>group_id</th>\n",
+       "            <th>root_id</th>\n",
+       "            <th>create_uid</th>\n",
+       "            <th>write_uid</th>\n",
+       "            <th>name</th>\n",
+       "            <th>code</th>\n",
+       "            <th>account_type</th>\n",
+       "            <th>internal_group</th>\n",
+       "            <th>note</th>\n",
+       "            <th>deprecated</th>\n",
+       "            <th>include_initial_balance</th>\n",
+       "            <th>reconcile</th>\n",
+       "            <th>is_off_balance</th>\n",
+       "            <th>non_trade</th>\n",
+       "            <th>create_date</th>\n",
+       "            <th>write_date</th>\n",
+       "            <th>asset_model</th>\n",
+       "            <th>create_asset</th>\n",
+       "            <th>multiple_assets_per_line</th>\n",
+       "        </tr>\n",
+       "    </thead>\n",
+       "    <tbody>\n",
+       "    </tbody>\n",
+       "</table>"
+      ],
+      "text/plain": [
+       "[]"
+      ]
+     },
+     "execution_count": 20,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "%%sql \n",
     "SELECT * FROM account_account LIMIT 100;"
