--- a/DBConn.ipynb
+++ b/DBConn.ipynb
@@ -24,19 +24,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 1,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "<sqlalchemy.engine.base.Connection object at 0x000001A7082595B0>\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
-    "import psycopg2 \n",
+    "\"\"\" import psycopg2 \n",
     "import pandas as ps\n",
     "from sqlalchemy import create_engine\n",
     "from sqlalchemy import URL\n",
@@ -45,7 +37,6 @@
     "    \n",
     "    \"postgresql+psycopg2\",\n",
     "    username=\"postgres\",\n",
-    "  #  password=\"openpgpwd\",\n",
     "    password=\"openpgpwd\",  # plain (unescaped) text\n",
     "    host=\"localhost\",\n",
     "   # database=\"test\",\n",
@@ -57,20 +48,21 @@
     "# Connect to PostgreSQL server\n",
     "#print(alchemyEngine)\n",
     "dbConnection = alchemyEngine.connect();\n",
-    "print(dbConnection)\n"
+    "#print(dbConnection) \"\"\"\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Read data from PostgreSQL database table and load into a DataFrame instance\n",
+    "\"\"\" # Read data from PostgreSQL database table and load into a DataFrame instance\n",
     "\n",
     "df   = ps.read_sql(\"SELECT * FROM sale_order_line LIMIT 100\", dbConnection)\n",
     "ps.set_option('display.expand_frame_repr', False)\n",
-    "\n"
+    "\n",
+    " \"\"\""
    ]
   },
   {
@@ -90,7 +82,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -99,7 +91,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
@@ -118,7 +110,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
@@ -127,7 +119,7 @@
        "'postgresql://postgres:openpgpwd@localhost:5432/RetailDB'"
       ]
      },
-     "execution_count": 6,
+     "execution_count": 3,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -138,7 +130,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -148,7 +140,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
@@ -525,7 +517,7 @@
        " (5, 2, 10, 1, 1, 13, 2, 15, 4, None, 1, 1, 'draft', None, 'manual', 'no', None, 'Virtual Home Staging', Decimal('30.00'), Decimal('38.25'), Decimal('0.00'), Decimal('38.25'), Decimal('1147.50'), Decimal('1147.50'), Decimal('38.25'), Decimal('38.25'), Decimal('0.00'), Decimal('0.00'), Decimal('0.00'), Decimal('0.00'), Decimal('0.00'), None, None, datetime.datetime(2023, 6, 8, 6, 29, 24, 888890), datetime.datetime(2023, 6, 8, 6, 29, 24, 888890), 0.0, 0.0, 0.0, None, None, None, 0.0, 0.0, True, None, None, None, None, False, None, 0.0, None, None, None, 0.0, None)]"
       ]
      },
-     "execution_count": 8,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     }
