--- a/DBConn.ipynb
+++ b/DBConn.ipynb
@@ -24,7 +24,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -48,7 +48,7 @@
     "# Connect to PostgreSQL server\n",
     "#print(alchemyEngine)\n",
     "dbConnection = alchemyEngine.connect();\n",
-    "#print(dbConnection) \"\"\"\n"
+    "#print(dbConnection) \"\"\""
    ]
   },
   {
