--- a/DBConn.ipynb
+++ b/DBConn.ipynb
@@ -82,7 +82,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 50,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -94,7 +94,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 51,
    "metadata": {},
    "outputs": [
     {
@@ -306,7 +306,7 @@
        "[5 rows x 56 columns]"
       ]
      },
-     "execution_count": 9,
+     "execution_count": 51,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -325,7 +325,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -339,42 +339,25 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "The sql extension is already loaded. To reload it, use:\n",
-      "  %reload_ext sql\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "%load_ext sql"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "env: DATABASE_URL='mysql://{user}:{password}@localhost/mydbtest'.format(user='root',password='openpgpwd')\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "%env  DATABASE_URL = 'mysql://{user}:{password}@localhost/mydbtest'.format(user='root',password='openpgpwd')"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 41,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -384,70 +367,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 42,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      " * mysql://root:***@localhost/mydbtest\n",
-      "   postgresql://postgres:***@localhost:5432/RetailDB\n",
-      "6 rows affected.\n"
-     ]
-    },
-    {
-     "data": {
-      "text/html": [
-       "<table>\n",
-       "    <thead>\n",
-       "        <tr>\n",
-       "            <th>name</th>\n",
-       "            <th>id</th>\n",
-       "        </tr>\n",
-       "    </thead>\n",
-       "    <tbody>\n",
-       "        <tr>\n",
-       "            <td>Muhammad</td>\n",
-       "            <td>2</td>\n",
-       "        </tr>\n",
-       "        <tr>\n",
-       "            <td>Muhammad</td>\n",
-       "            <td>1</td>\n",
-       "        </tr>\n",
-       "        <tr>\n",
-       "            <td>Muhammad</td>\n",
-       "            <td>1</td>\n",
-       "        </tr>\n",
-       "        <tr>\n",
-       "            <td>Muhammad</td>\n",
-       "            <td>1</td>\n",
-       "        </tr>\n",
-       "        <tr>\n",
-       "            <td>Muhammad</td>\n",
-       "            <td>1</td>\n",
-       "        </tr>\n",
-       "        <tr>\n",
-       "            <td>Muhammad</td>\n",
-       "            <td>1</td>\n",
-       "        </tr>\n",
-       "    </tbody>\n",
-       "</table>"
-      ],
-      "text/plain": [
-       "[('Muhammad', 2),\n",
-       " ('Muhammad', 1),\n",
-       " ('Muhammad', 1),\n",
-       " ('Muhammad', 1),\n",
-       " ('Muhammad', 1),\n",
-       " ('Muhammad', 1)]"
-      ]
-     },
-     "execution_count": 42,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "%%sql\n",
     "select * from mttable;"
@@ -455,7 +377,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 45,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -465,7 +387,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 46,
+   "execution_count": 48,
    "metadata": {},
    "outputs": [
     {
@@ -538,7 +460,7 @@
        "5  Muhammad   1"
       ]
      },
-     "execution_count": 46,
+     "execution_count": 48,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -550,10 +472,24 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 52,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "5"
+      ]
+     },
+     "execution_count": 52,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "#insert into\n",
+    "df.to_sql('sale_order_line',connMysql)"
+   ]
   }
  ],
  "metadata": {
